--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
     .box{
         text-align:center;
         position:relative;
-        width:320px;
-        height:200px;
+        width:420px;
+        height:320px;
     }
 
     button{
-        padding:12px 24px;
+        padding:15px 24px;
         font-size:16px;
         border:none;
         border-radius:8px;
@@ -70,7 +70,7 @@
 <body>
 
 <div class="box" id="box">
-    <h2>Will you give me a like? </h2>
+    <h2>Kupal kaba? </h2>
     <button id="yesBtn">Yes</button>
     <button id="noBtn">No</button>
 </div>
@@ -124,4 +124,5 @@ yesBtn.addEventListener("click", () => {
 </script>
 
 </body>
+
 </html>
